src/test/resources/gold/highlighting/annotator/invalid_enums.d

<error descr="Enum must have at least one member">enum {

}</error>

<error descr="Enum must have at least one member">enum X {

}</error>
